Fix that the filter jumps up when lessonlist length is zero.

--- a/src/pages/CoursePage.scss
+++ b/src/pages/CoursePage.scss
@@ -9,12 +9,14 @@
 }
 
 .jumpTo {
+  composes: topMargin;
   @media (min-width: $screen-sm-min) {
     height: 0;
   }
 }
 
 .noMatchingLessons {
+  composes: topMargin;
   font-size: 1.25em;
   font-weight: bold;
 }
